# magnesie-orchestrator

./: .gitignore  Cargo.toml  Dockerfile  README.md  index.html  plotSimulation.py  sim.sh  simulation.md  wait-for.sh
config/: open_weather_map.json
docs/: index.htm  search-index.js  source-files.js
docs/implementors/alloc/string/: trait.ToString.js
docs/main/: all.html  constant.VERBOSE.html  fn.add_clusters.html  fn.add_grid5000_cluster.html  fn.log.html  fn.log_error.html  fn.main.html  index.html  sidebar-items.js
docs/main/clusters/: index.html  sidebar-items.js
docs/main/jobs_buffer/: index.html  sidebar-items.js
docs/main/meteo_service/: index.html  sidebar-items.js
docs/main/orchestrator/: constant.ENERGY_COST_PER_COMPLEXITY_UNIT.html  index.html  sidebar-items.js  struct.Orchestrator.html
docs/main/services/: index.html  sidebar-items.js
docs/main/ssh_client/: index.html  sidebar-items.js
docs/src/main/: main.rs.html  orchestrator.rs.html
ressources/: grid5000_sites.txt
src/: cluster.rs  clusters.rs  jobs_buffer.rs  main.rs  meteo_service.rs  orchestrator.rs  services.rs  simulation.rs  ssh_client.rs
src/cluster/: Cluster.rs  Grid5000.rs
src/clusters/: cluster.rs  cluster_error.rs  clusters_manager.rs  grid5000.rs  local_photogrammetry.rs  mod.rs
src/clusters/grid5000/: grid5000_client.rs  grid5000_client_struct.rs  mod.rs
src/clusters/grid5000_struct/: grid5000_deploy_env_response.rs  grid5000_deployment_request.rs  grid5000_link_job.rs  grid5000_reservation_request.rs  gridd500_job_submit_response.rs  mod.rs
src/jobs_buffer/: buffer_error.rs  buffered_job.rs  jobs_buffer.rs  mod.rs
src/meteo_service/: meteo_service.rs  mod.rs
src/services/: image_storage.rs  input.rs  mod.rs  photogrammetry.rs  photogrammetry_service.rs  remote.rs  result_storage.rs  service.rs  service_access_information.rs  service_error.rs  services_keeper.rs
src/ssh_client/: mod.rs  ssh_client.rs
(+118 files in other folders)
