[package]
name = "orchestrateur"
version = "0.1.0"
authors = ["bart-tek <barthelemy.tek@imt-atlantique.net>"]
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
chrono = "0.4.19"

[[bin]]
name = "main"
path = "src/main.rs"
test = false
bench = false
