[package]
name = "orchestrateur"
version = "0.1.0"
authors = ["bart-tek <barthelemy.tek@imt-atlantique.net>", "marem-bzh <marclamy.bzh@gmail.com>"]
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
chrono = "0.4.19"
ssh2 = "0.9"
futures = "0.3"
rand = "0.8.0"
crossbeam-utils = "0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
lazy_static = "1.4.0"

[[bin]]
name = "main"
path = "src/main.rs"
test = false
bench = false
